--- a/src/components/css/NodeEdges.css
+++ b/src/components/css/NodeEdges.css
@@ -24,6 +24,7 @@
   position: absolute;
   top: 35px;
   min-width: 100px;
+  margin-bottom: 20px;
   border-radius: 2px;
   text-align: left;
   background-color: white;
